Criei a parte estrutural dos cadastros sem a estilização, concluirei mais tarde o restante.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
                     <ul>
                         <li><a>Inicio</a></li>
                         <li><a>Cadastro</a></li>
+                            <ul>
+                                <li><a href="cadConsulta.html">Consulta</a></li>
+                                <li><a href="cadFuncionario.html">Funcionário</a></li>
+                                <li><a href="cadDependente.html">Dependente</a></li>
+                                <li><a href="cadPaciente.html">Paciente</a></li>
+                                <li><a href="cadProcedimento.html">Procedimento</a></li>
+                                <li><a href="cadUsuario.html">Usuário</a></li>
+                            </ul>
                         <li><a>Atendimento</a></li>
                         <li><a>Estoque</a></li>
                         <li><a>Calendário</a></li>
