--- a/cadUsuario.html
+++ b/cadUsuario.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro de Novo Usuário</title>
+    <title>Cadastro de Usuário</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="content">
-        <h2>Cadastro de Novo Usuário</h2>
+        <h2>Cadastro de Usuário</h2>
         <form>
             <label for="idUsuario">Usuário:</label>
             <input type="text" name="Usuario" id="idUsuario" placeholder="Informe o seu nome de usuário">
