Estou colocando para servir como base de estilização(Cadastro de Funcionarios)

--- a/index.html
+++ b/index.html
@@ -22,23 +22,23 @@
   <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Início<span class="sr-only">(página atual)</span></a>
+        <a class="nav-link" href="index.html">Início</a>
       </li>
 	  <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Cadastro
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Consulta</a>
+          <a class="dropdown-item" href="cadConsulta.html">Consulta</a>
           <div class="dropdown-divider"></div>
-		  <a class="dropdown-item" href="#">Funcionário</a>
-          <a class="dropdown-item" href="#">Dependende</a>
+		  <a class="dropdown-item" href="cadFuncionario.html">Funcionário</a>
+          <a class="dropdown-item" href="cadDependente.html">Dependende</a>
 		  <div class="dropdown-divider"></div>
-		  <a class="dropdown-item" href="#">Paciente</a>
+		  <a class="dropdown-item" href="cadPaciente.html">Paciente</a>
 		  <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Procedimento</a>
+          <a class="dropdown-item" href="cadProcedimento.html">Procedimento</a>
 		  <div class="dropdown-divider"></div>
-		  <a class="dropdown-item" href="#">Usuário</a>
+		  <a class="dropdown-item" href="cadUsuario.html">Usuário</a>
         </div>
 	  </li>
       <li class="nav-item">
