--- a/cadFuncionario.html
+++ b/cadFuncionario.html
@@ -6,6 +6,9 @@
     <title>Cadastro de Funcionário</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/bootstrap.css">
+    <script src="js/popper.min.js"></script>
+	<script src="js/jquery-3.5.1.slim.min.js"></script>
+	<script src="js/bootstrap.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #271c64;">
@@ -56,7 +59,7 @@
       </nav>
     <div class="container" id="generic">
         <h2>Cadastro Funcionário</h2>
-        <form name="cadFunc">
+        <form name="cadFuncionario">
             <div class="form-group">
                 <label for="idFuncionario">Nome:</label>
                 <input type="text" name="nomeFuncionario" id="idFuncionario" class="form-control" placeholder="Informe o seu nome do funcionário">
